Fixed IE, Safari bug. Drop down menu was aligned too far to the right.  (Migrated by TFS Migration Toolkit) (Updated by TFS to TFS Connector, server: http://1x:8080/, id 2864. )(Edited by AESDEAN\Tran)
git-tfs-id: [https://tfs.caes.ucdavis.edu:8088/tfs/DefaultCollection]$/Recruitments/Trunk/Recruitment;C2896

--- a/Recruitment.Web/fracstyle.css
+++ b/Recruitment.Web/fracstyle.css
@@ -357,7 +357,7 @@ li.viewPositionsList a:active {background: url(Images/ibPositionsList3.gif) no-r
 /*                               */
 
 .dropdownmenu {
-float:right; text-align:right; position:relative; background:transparent; width:240px;  margin:0;
+float:right; text-align:right; position:relative; background:transparent; width:310px;  margin:0; z-index: 100;
 }
 .dropdownmenu ul {
 padding:0; margin:0; list-style-type: none;
